# perplexity-shell

./: README.md  perplexity-shell.zsh  perplexity-shell.ztr.zsh  perplexity_python.zsh  perplexity_query.py  perplexity_shell.py  perplexity_shell_only.zsh  pyproject.toml
spec/: perplexity_shell_spec.sh
